@@ -78,13 +78,13 @@ class SbtRunner(repos:List[xsbti.Repository], globalBase: File, debug: Boolean) 
 object SbtRunner {
   // TODO - Configure these somewhere?
   val defaultJavaArgs = Seq(
-   "-XX:+CMSClassUnloadingEnabled",
-   "-XX:+UseConcMarkSweepGC",
-   "-Xms1536m",
-   "-Xmx1536m",
-   "-Xss2m",
-   "-XX:MaxPermSize=640m",
-   "-XX:ReservedCodeCacheSize=192m"    
+    "-XX:+CMSClassUnloadingEnabled",
+    "-XX:+DoEscapeAnalysis",
+    "-Xms1536m",
+    "-Xmx1536m",
+    "-Xss2m",
+    "-XX:MaxPermSize=640m",
+    "-XX:ReservedCodeCacheSize=192m"
   )
 
   def writeQuietIvyLogging(dir: File, debug: Boolean) = {
